pxe/base/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
  template:
    metadata:
    spec:
      containers:
      - name: web
        image: registry.access.redhat.com/ubi9/nginx-122:1-69.1714669800
        command:
        - "nginx"
        - "-g"
        - "daemon off;"
        volumeMounts:
        - name: data
          mountPath: /opt/app-root/src
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: http
          containerPort: 8080
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: web
