pxe/base/web/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`pxe.ajphome.com`)
    kind: Rule
    services:
    - name: pxe-web
      port: 8080
